@@ -1,3 +1,6 @@
+2005-10-12	Anthony Kozar	<anthonykozar@sbcglobal.net>
+	* Opcodes/gab/vectorial.c:  Fixed small bugs in checking table size.
+
 2005-10-11	Anthony Kozar	<anthonykozar@sbcglobal.net>
 	* H/cscore.h, Top/cscorfns.c, Top/cscore_internal.c:  Renamed all Cscore
 		functions that are to be exported in the "Cscore API".  Made all of
